--- a/framework_task/C3/app/views/tasks/_task.html.erb
+++ b/framework_task/C3/app/views/tasks/_task.html.erb
@@ -1,5 +1,5 @@
   <p>
     <%= task.name %> <%= link_to 'Delete', [task.list, task],
                :confirm => 'Are you sure?',
-               :method => :delete %>
+               :method => :delete %> | <%= link_to 'Edit', edit_list_task_path(task.list, task) %>
   </p>
