--- a/framework_task/C1/taskodio/accounts/templates/accounts/signin.html
+++ b/framework_task/C1/taskodio/accounts/templates/accounts/signin.html
@@ -2,9 +2,10 @@
 <h1>Login Page</h1>
 <form action="/accounts/login/" method="post">
 	<input type="text" placeholder="Username" name="username">
-	<input type="text" placeholder="Password" name="password">
+	<input type="password" placeholder="Password" name="password">
 	<input type="submit" value="Sign In!">
 </form>
+
 {% if errors %}
 <p>{{errors}}</p>
 {% endif %}
