Khloud finished s6: functional but not done

--- a/framework_task/C1/taskodio/lists/templates/lists/list_manage.html
+++ b/framework_task/C1/taskodio/lists/templates/lists/list_manage.html
@@ -1,5 +1,5 @@
 <h1>List page.....Hello, {{ user.username }}</h1>
-{% if detail_error %}<p><strong> {{ detail_strong }}</strong></p> {% endif %}
+{% if detail_error %}<p><strong> {{ detail_error }}</strong></p> {% endif %}
 <form action="/lists/create_list/" method="post">
 	<input type="text" placeholder="list name" name="list_name">
 	<input type="submit" value="Create new List">
@@ -8,7 +8,9 @@
 {% if list_name_set %}
     <ul>
     {% for list in list_name_set %}
-        <li>{{ list.title }}</li>
+        <li>{{ list.title }}
+        	<a href="/lists/{{list.id}}/delete"> Delete</a>
+        </li>
     {% endfor %}
     </ul>
 {% else %}
