kareem added viewing of task and their description

--- a/framework_task/C1/taskodio/lists/templates/lists/list_manage.html
+++ b/framework_task/C1/taskodio/lists/templates/lists/list_manage.html
@@ -11,7 +11,9 @@
     <ul>
     {% for list in list_name_set %}
 
-        <li>{{ list.title }} <a href="/lists/{{ list.id }}/edit">Edit</a> <a href="/lists/{{list.id}}/delete"> Delete</a> </li>
+        <li><a href="/lists/{{list.id}}">{{list.title}}</a> 
+        	<a href="/lists/{{ list.id }}/edit">Edit</a> 
+        	<a href="/lists/{{list.id}}/delete"> Delete</a> </li>
       
     {% endfor %}
     </ul>
