--- a/framework_task/C1/taskodio/lists/templates/lists/list_manage.html
+++ b/framework_task/C1/taskodio/lists/templates/lists/list_manage.html
@@ -11,10 +11,24 @@
     <ul>
     {% for list in list_name_set %}
 
-        <li>{{ list.title }} <a href="/lists/{{ list.id }}/edit">Edit</a> <a href="/lists/{{list.id}}/delete"> Delete</a> </li>
+        <li>{{ list.title }} <a href="/lists/{{ list.id }}/edit">Edit</a> <a href="/lists/{{list.id}}/delete"> Delete</a>
+        <a href="/lists/{{list.id}}/share"> Share</a>        </li>
       
     {% endfor %}
     </ul>
 {% else %}
     <p>No lists are available.</p>
+{% endif %}
+<p>Shared lists:.</p>
+{% if shared_list_set %}
+	<ul>
+    {% for list in shared_list_set %}
+
+        <li>{{ list.title }} <a href="/lists/{{ list.id }}/edit">Edit</a> <a href="/lists/{{list.id}}/delete"> Delete</a>
+        <a href="/lists/{{list.id}}/share"> Share</a>        </li>
+      
+    {% endfor %}
+    </ul>
+ {% else %}
+    <p>No shared lists.</p>
 {% endif %}
