--- a/framework_task/C1/taskodio/lists/templates/lists/new_list.html
+++ b/framework_task/C1/taskodio/lists/templates/lists/new_list.html
@@ -7,3 +7,4 @@
 	<input type="text" placeholder="List name" name="list_name">
 	<input type="submit" value="Create new list">
 </form>
+<a href="/">Return to your lists</a>
