--- a/framework_task/C1/taskodio/lists/templates/lists/share.html
+++ b/framework_task/C1/taskodio/lists/templates/lists/share.html
@@ -1,4 +1,6 @@
 {{title}}
+<a href="/signout">Sign out</a>
+<br>
 {% if errors %}
 	<p><strong>{{ errors }}</strong></p> 
 {% endif %}
@@ -7,3 +9,4 @@
 	<input type="text" placeholder="enter username" name="shared_user">
 	<input type="submit" value="Share!">
 </form>
+<a href="/">Return to your lists</a>
