--- a/framework_task/C1/taskodio/lists/templates/lists/list_manage.html
+++ b/framework_task/C1/taskodio/lists/templates/lists/list_manage.html
@@ -1,7 +1,15 @@
 <h1>List page.....Hello, {{ user.username }}</h1>
 {% if detail_error %}<p><strong> {{ detail_error }}</strong></p> {% endif %}
 {% if success %}<p><strong> {{ success }}</strong></p> {% endif %}
-<a href="/lists/new_list">Create a List</a>
+<a href="/signout">Sign out</a>
+<br>
+<br>
+ <a href="/lists/new_list">Create a List</a>
+ <br>
+ <br>
+ <a href="/register">Not {{ user.username}} Register Here</a>
+ <br>
+ <br>
 <hr>
 {% if list_name_set %}
     <ul>
@@ -10,7 +18,10 @@
         <li><a href="/lists/{{list.id}}">{{list.title}}</a> 
         	<a href="/lists/{{ list.id }}/edit">Edit</a> 
         	<a href="/lists/{{list.id}}/delete"> Delete</a>
-            <a href="/lists/{{list.id}}/share"> Share</a> </li>
+            <a href="/lists/{{list.id}}/share"> Share</a> 
+        </li>
+        <br>
+        <br>
     {% endfor %}
     </ul>
 {% else %}
@@ -21,8 +32,10 @@
 	<ul>
     {% for list in shared_list_set %}
 
-        <li><a href="/lists/{{list.id}}">{{list.title}}</a> <a href="/lists/{{ list.id }}/edit">Edit</a> <a href="/lists/{{list.id}}/delete"> Delete</a>
-        <a href="/lists/{{list.id}}/share"> Share</a>        </li>
+        <li>
+            <a href="/lists/{{list.id}}">{{list.title}}</a> 
+            <a href="/lists/{{ list.id }}/edit">Edit</a>         
+        </li>
       
     {% endfor %}
     </ul>
