Kareem fixing accounts templates

--- a/framework_task/C1/taskodio/accounts/templates/accounts/register.html
+++ b/framework_task/C1/taskodio/accounts/templates/accounts/register.html
@@ -1,8 +1,16 @@
-<h1>Registration Page</h1>
-{% if error %}<p><strong>{{ error }}</strong></p>{% endif %}
-<form action="/accounts/signup/" method="post">
-	<input type="text" placeholder="Email" name="email">
-	<input type="text" placeholder="Username" name="username">
-	<input type="password" placeholder="Password" name="password">
-	<input type="submit" value="Signup!">
-</form>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>taskodio</title>
+	</head>
+<body>
+	<h1>Registration Page</h1>
+	{% if error %}<p><strong>{{ error }}</strong></p>{% endif %}
+	<form action="/accounts/signup/" method="post">
+		<input type="text" placeholder="Email" name="email">
+		<input type="text" placeholder="Username" name="username">
+		<input type="password" placeholder="Password" name="password">
+		<input type="submit" value="Signup!">
+	</form>
+</body>
+</html>
