--- a/framework_task/C1/taskodio/lists/templates/lists/list_manage.html
+++ b/framework_task/C1/taskodio/lists/templates/lists/list_manage.html
@@ -1,55 +1,87 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Lists Page</title>
+        <title>taskodio</title>
+        <link rel="stylesheet" type="text/css" href="/media/css/bootstrap.css" />
     </head>
     <body>
-        <h1>List page.....Hello, {{ user.username }}</h1>
-        {% if detail_error %}<p><strong> {{ detail_error }}</strong></p> {% endif %}
-        {% if success %}<p><strong> {{ success }}</strong></p> {% endif %}
-        <a href="/signout">Sign out</a>
-        <br>
-        <br>
-         <a href="/lists/new_list">Create a List</a>
-         <br>
-         <br>
-         <a href="/register">Not {{ user.username}} Register Here</a>
-         <br>
-         <br>
-        <hr>
-        {% if list_name_set %}
-            <ul>
+    <div class="navbar">
+        <div class="navbar-inner">
+            <a class="brand" href="/">taskodio</a>
+            <ul class="nav pull-right">
+                <li><a href="/lists/new_list">New List</a></li>
+                <li><a href="#">You are logged in as, {{ user.username }}</a></li>
+                <li><a href="/signout">Sign out</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="well">
+            {% if success %}
+                <div class="alert">
+                    {{ success }}
+                </div>
+            {% endif %}
+            <h1>Hello, {{ user.username }} </h1><br>
+
+            <h3>Your lists</h3>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>List Name</th>
+                  <th>Edit</th>
+                  <th>Delete</th>
+                  <th>Share</th>
+                </tr>
+              </thead>
+              {% if list_name_set %}
+              <tbody>
                 {% for list in list_name_set %}
-
-                    <li>
-                        <a href="/lists/{{list.id}}">{{list.title}}</a> 
-                        <a href="/lists/{{ list.id }}/edit">Edit</a> 
-                        <a href="/lists/{{list.id}}/delete"> Delete</a>
-                        <a href="/lists/{{list.id}}/share"> Share</a> 
-                    </li>
-                    <br>
-                    <br>
+                    <tr>
+                        <td><a href="/lists/{{list.id}}">{{list.title}}</a></td>
+                        <td><a href="/lists/{{list.id}}/edit"><i class="icon-edit"></i></a></td></td>
+                        <td><a href="/lists/{{list.id}}/delete"><i class="icon-remove-sign"></i></a></td></td>
+                        <td><a href="/lists/{{list.id}}/share"><i class="icon-share-alt"></i></a></td></td>
+                        
+                    </tr>
                 {% endfor %}
-            </ul>
-        {% else %}
-            <p>No lists are available.</p>
-        {% endif %}
-        <p>Shared lists:.</p>
-        {% if shared_list_set %}
-            <ul>
-            {% for list in shared_list_set %}
+              </tbody>
+              {% else %}
+                <p>You don't have any lists.</p>
+              {% endif %}
+            </table>
 
-                <li>
-                    <a href="/lists/{{list.id}}">{{list.title}}</a> 
-                    <a href="/lists/{{ list.id }}/edit">Edit</a>
-                    <a href="/lists/{{ list.id}}/delete">Remove</a>         
-                </li>
-              
-            {% endfor %}
-            </ul>
-         {% else %}
-            <p>No shared lists.</p>
-        {% endif %}
+
+             <h3>Shared lists</h3>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>List Name</th>
+                  <th>Edit</th>
+                  <th>Remove</th>
+                  <th>Share</th>
+                </tr>
+              </thead>
+              {% if shared_list_set %}
+              <tbody>
+                {% for list in shared_list_set %}
+                    <tr>
+                        <td><a href="/lists/{{list.id}}">{{list.title}}</a></td>
+                        <td><a href="/lists/{{list.id}}/edit"><i class="icon-edit"></i></a></td></td>
+                        <td><a href="/lists/{{list.id}}/delete"><i class="icon-remove-sign"></i></a></td></td>
+                        <td><a href="/lists/{{list.id}}/share"><i class="icon-share-alt"></i></a></td></td>
+                        
+                    </tr>
+                {% endfor %}
+              </tbody>
+              {% else %}
+                <p>You don't have any <i>shared</i> lists.</p>
+              {% endif %}
+            </table>
+
+        </div>
+    </div>
     </body>
 </html>
 
