--- a/framework_task/C1/taskodio/lists/templates/lists/new_list.html
+++ b/framework_task/C1/taskodio/lists/templates/lists/new_list.html
@@ -1,10 +1,18 @@
-{{ title }}
-{% if list_errors %}
-	<p><strong>{{ list_errors }}</strong></p> 
-{% endif %}
-<br>
-<form action="/lists/new_list/create_list/" method="post">
-	<input type="text" placeholder="List name" name="list_name">
-	<input type="submit" value="Create new list">
-</form>
-<a href="/">Return to your lists</a>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Create Lists</title>
+	</head>
+	<body>
+		{{ title }}
+		{% if list_errors %}
+			<p><strong>{{ list_errors }}</strong></p> 
+		{% endif %}
+		<br>
+		<form action="/lists/new_list/create_list/" method="post">
+			<input type="text" placeholder="List name" name="list_name">
+			<input type="submit" value="Create new list">
+		</form>
+		<a href="/">Return to your lists</a>
+	</body>
+</html>
