finished up to the edit page

--- a/framework_task/C1/taskodio/lists/templates/lists/list_manage.html
+++ b/framework_task/C1/taskodio/lists/templates/lists/list_manage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>taskodio</title>
+        <title>taskodio | Home</title>
         <link rel="stylesheet" type="text/css" href="/media/css/bootstrap.css" />
     </head>
     <body>
@@ -9,7 +9,7 @@
         <div class="navbar-inner">
             <a class="brand" href="/">taskodio</a>
             <ul class="nav pull-right">
-                <li><a href="/lists/new_list">New List</a></li>
+                <li><a href="/lists/new_list">Create a new list</a></li>
                 <li><a href="#">You are logged in as, {{ user.username }}</a></li>
                 <li><a href="/signout">Sign out</a></li>
             </ul>
