--- a/framework_task/C1/taskodio/lists/templates/lists/edit.html
+++ b/framework_task/C1/taskodio/lists/templates/lists/edit.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>taskodio | Edit list</title>
+		<link rel="stylesheet" type="text/css" href="/media/css/bootstrap.css" />
+	</head>
+	
 	<body>
-		<head>
-			<title>Edit Lists</title>
-		</head>
-		{{title}}
-		<a href="/signout">Sign out</a>
-		<br>
-		{% if errors %}
-			<p><strong>{{ errors }}</strong></p> 
-		{% endif %}
-		<br>
-		<form action="/lists/{{list.id}}/edit_list/" method="post">
-			<input type="text" placeholder="{{list.title}}" name="list_title">
-			<input type="submit" value="Edit">
-		</form>
+    <div class="navbar">
+        <div class="navbar-inner">
+            <a class="brand" href="/">taskodio</a>
+            <ul class="nav pull-right">
+                <li><a href="/lists/new_list">Create a new list</a></li>
+                <li><a href="#">You are logged in as, {{ user.username }}</a></li>
+                <li><a href="/signout">Sign out</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="container">
+    	<div class="well">
+    		{% if errors %}
+                <div class="alert">
+                    {{ errors }}
+                </div>
+            {% endif %}
+	<form action="/lists/{{list.id}}/edit_list/" method="post">
+		<input type="text" placeholder="{{list.title}}" name="list_title"><br>
+		<input type="submit" value="Update" class="btn btn-success">
+	</form>
 		<a href="/">Return to your lists</a>
+    	</div>
+    </div>
+
+	
 	</body>
 </html>
