finished edit and new list views

--- a/framework_task/C1/taskodio/lists/templates/lists/new_list.html
+++ b/framework_task/C1/taskodio/lists/templates/lists/new_list.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Create Lists</title>
+		<title>taskodio | Create a new list</title>
+		<link rel="stylesheet" type="text/css" href="/media/css/bootstrap.css" />
 	</head>
 	<body>
-		{{ title }}
-		{% if list_errors %}
-			<p><strong>{{ list_errors }}</strong></p> 
-		{% endif %}
-		<br>
-		<form action="/lists/new_list/create_list/" method="post">
-			<input type="text" placeholder="List name" name="list_name">
-			<input type="submit" value="Create new list">
+
+ 	<div class="navbar">
+        <div class="navbar-inner">
+            <a class="brand" href="/">taskodio</a>
+            <ul class="nav pull-right">
+                <li><a href="/lists/new_list">Create a new list</a></li>
+                <li><a href="#">You are logged in as, {{ user.username }}</a></li>
+                <li><a href="/signout">Sign out</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="container">
+    	<div class="well">
+    	<h3>Create a new list</h3>
+    	{% if list_errors %}
+            <div class="alert">
+                {{ list_errors }}
+            </div>
+        {% endif %}
+        <form action="/lists/new_list/create_list/" method="post">
+			<input type="text" placeholder="List name" name="list_name"><br>
+			<input type="submit" value="Create new list" class="btn btn-success">
 		</form>
 		<a href="/">Return to your lists</a>
+    </div>
+</div>
+	
 	</body>
 </html>
