--- a/framework_task/C1/taskodio/lists/templates/lists/edit.html
+++ b/framework_task/C1/taskodio/lists/templates/lists/edit.html
@@ -18,7 +18,9 @@
     </div>
 
     <div class="container">
-    	<div class="well">
+
+    <div class="well">
+        <h3>Edit list title</h3>
     		{% if errors %}
                 <div class="alert">
                     {{ errors }}
